Run haproxy in foreground mode and let consul-template wait for a few seconds until haproxy is started.

--- a/assets/supervisor.conf
+++ b/assets/supervisor.conf
@@ -8,9 +8,9 @@ childlogdir=/opt/supervisor
 serverurl = unix:///opt/supervisor/supervisor.sock
 
 [program:consul-template]
-command=/opt/consul/consul-template -consul consul:8500 -template "/usr/local/etc/haproxy/haproxy.cfg.ctmpl:/usr/local/etc/haproxy/haproxy.cfg:supervisorctl restart haproxy"
+command=sleep 2 && /opt/consul/consul-template -consul consul:8500 -template "/usr/local/etc/haproxy/haproxy.cfg.ctmpl:/usr/local/etc/haproxy/haproxy.cfg:supervisorctl -c /opt/supervisor/supervisor.conf restart haproxy"
 autorestart=true
 
 [program:haproxy]
-command=haproxy -f /usr/local/etc/haproxy/haproxy.cfg
+command=haproxy -db -f /usr/local/etc/haproxy/haproxy.cfg
 autorestart=true
