Removed 'sleep command' from supervisor's consul-template configuration.

--- a/assets/supervisor.conf
+++ b/assets/supervisor.conf
@@ -8,7 +8,7 @@ childlogdir=/opt/supervisor
 serverurl = unix:///opt/supervisor/supervisor.sock
 
 [program:consul-template]
-command=sleep 2 && /opt/consul/consul-template -consul consul:8500 -template "/usr/local/etc/haproxy/haproxy.cfg.ctmpl:/usr/local/etc/haproxy/haproxy.cfg:supervisorctl -c /opt/supervisor/supervisor.conf restart haproxy"
+command=/opt/consul/consul-template -consul consul:8500 -template "/usr/local/etc/haproxy/haproxy.cfg.ctmpl:/usr/local/etc/haproxy/haproxy.cfg:supervisorctl -c /opt/supervisor/supervisor.conf restart haproxy"
 autorestart=true
 
 [program:haproxy]
