Added configuration for HTTP server (unix socker).

--- a/assets/supervisor.conf
+++ b/assets/supervisor.conf
@@ -4,6 +4,10 @@ logfile=/opt/supervisor/supervisord.log
 pidfile=/opt/supervisor/supervisord.pid
 childlogdir=/opt/supervisor
 
+[unix_http_server]
+file=/opt/supervisor/supervisor.sock
+chmod=0700
+
 [supervisorctl]
 serverurl = unix:///opt/supervisor/supervisor.sock
 
