--- a/assets/supervisor.conf
+++ b/assets/supervisor.conf
@@ -4,6 +4,9 @@ logfile=/opt/supervisor/supervisord.log
 pidfile=/opt/supervisor/supervisord.pid
 childlogdir=/opt/supervisor
 
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [unix_http_server]
 file=/opt/supervisor/supervisor.sock
 chmod=0700
